spec/lib/cli/log/errors/configurerUndefined.js
// Generated by CoffeeScript 1.12.6
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive({
      it: 'returns `configurerUndefined` error message',
      i: [],
      e: "In order to omit configurer path please specify it at least once."
    });
  };

}).call(this);
